assets/css/main.css
/* ... */
body.modal--open {
    overflow: hidden
}

table {
    display: table;
    width: 100%;
    overflow-x: scroll;
    margin-bottom: 1.25rem;
    border-collapse: collapse;
    border-spacing: 0;
    border: 1px solid #ededed;
    border-radius: 4px;
    font-size: 14.5px
}

table th {
    background-color: #f9f9f9
}

table th, table td {
    padding: 6px 13px;
    border: 1px solid #ededed
}

.highlight table td {
    padding: 5px
}

.highlight table pre {
    margin: 0
}

.highlight .cm {
    color: #999988;
    font-style: italic
}

.highlight .cp {
    color: #999999;
    font-weight: bold
}

.highlight .c1 {
    color: #999988;
    font-style: italic
}

.highlight .cs {
    color: #999999;
    font-weight: bold;
    font-style: italic
}

.highlight .c, .highlight .cd {
    color: #999988;
    font-style: italic
}

.highlight .err {
    color: #a61717;
    background-color: #e3d2d2
}

.highlight .gd {
    color: #000000;
    background-color: #ffdddd
}

.highlight .ge {
    color: #000000;
    font-style: italic
}

.highlight .gr {
    color: #aa0000
}

.highlight .gh {
    color: #999999
}

.highlight .gi {
    color: #000000;
    background-color: #ddffdd
}

.highlight .go {
    color: #888888
}

.highlight .gp {
    color: #555555
}

.highlight .gs {
    font-weight: bold
}

.highlight .gu {
    color: #aaaaaa
}

.highlight .gt {
    color: #aa0000
}

.highlight .kc {
    color: #000000;
    font-weight: bold
}

.highlight .kd {
    color: #000000;
    font-weight: bold
}

.highlight .kn {
    color: #000000;
    font-weight: bold
}

.highlight .kp {
    color: #000000;
    font-weight: bold
}

.highlight .kr {
    color: #000000;
    font-weight: bold
}

.highlight .kt {
    color: #445588;
    font-weight: bold
}

.highlight .k, .highlight .kv {
    color: #000000;
    font-weight: bold
}

.highlight .mf {
    color: #009999
}

.highlight .mh {
    color: #009999
}

.highlight .il {
    color: #009999
}

.highlight .mi {
    color: #009999
}

.highlight .mo {
    color: #009999
}

.highlight .m, .highlight .mb, .highlight .mx {
    color: #009999
}

.highlight .sb {
    color: #d14
}

.highlight .sc {
    color: #d14
}

.highlight .sd {
    color: #d14
}

.highlight .s2 {
    color: #d14
}

.highlight .se {
    color: #d14
}

.highlight .sh {
    color: #d14
}

.highlight .si {
    color: #d14
}

.highlight .sx {
    color: #d14
}

.highlight .sr {
    color: #009926
}

.highlight .s1 {
    color: #d14
}

.highlight .ss {
    color: #990073
}

.highlight .s {
    color: #d14
}

.highlight .na {
    color: #008080
}

.highlight .bp {
    color: #999999
}

.highlight .nb {
    color: #0086B3
}

.highlight .nc {
    color: #445588;
    font-weight: bold
}

.highlight .no {
    color: #008080
}

.highlight .nd {
    color: #3c5d5d;
    font-weight: bold
}

.highlight .ni {
    color: #800080
}

.highlight .ne {
    color: #990000;
    font-weight: bold
}

.highlight .nf {
    color: #990000;
    font-weight: bold
}

.highlight .nl {
    color: #990000;
    font-weight: bold
}

.highlight .nn {
    color: #555555
}

.highlight .nt {
    color: #000080
}

.highlight .vc {
    color: #008080
}

.highlight .vg {
    color: #008080
}

.highlight .vi {
    color: #008080
}

.highlight .nv {
    color: #008080
}

.highlight .ow {
    color: #000000;
    font-weight: bold
}

.highlight .o {
    color: #000000;
    font-weight: bold
}

.highlight .w {
    color: #bbbbbb
}

.highlight {
    background-color: #f8f8f8
}

.hero {
    margin: 3.75rem auto 0;
    min-height: 16.25rem;
    width: 100%;
    position: relative;
    background-color: #dde5ea;
    background-repeat: no-repeat;
    background-position: 50%;
    background-size: cover;
    margin: 0 auto;
    height: 40em
}

@media only screen and (min-width: 62em) {
    .hero {
        margin: 0 auto;
        height: 30em
    }
}

.hero::before {
    position: absolute;
    display: block;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgb(255, 255, 255)
}

.hero--small {
    margin: 3.75rem auto 0;
    min-height: 8.75rem;
    width: 100%;
    position: relative;
}

@media only screen and (min-width: 62em) {
    .hero--small {
        height: 12.5em
    }
}

.hero--small::before {
    position: absolute;
    display: block;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgb(5, 103, 184)
}

.hero__wrap {
    position: absolute;
    margin: auto;
    top: 45%;
    left: 50%;
    -webkit-transform: translate(-50%, -35%);
    transform: translate(-50%, -35%);
    text-align: center;
    color: rgba(49, 50, 55, 1);
    width: 100%;
    max-width: 31em;
    display: grid;  
    grid-gap: 15px;
    grid-template-rows: repeat(auto-fit, 150px); 
    align-items: end;
    padding-right: 5px;
    padding-left: 5px;
}

.centered-grid {
    justify-items: center;
}

.leftaligned-grid {
    justify-items: left;
}

@media only screen and (min-width: 62em) {
    .hero__wrap {
        top: 50%;
        max-width: 61em;
        grid-template-rows: repeat(auto-fit, 300px);
        grid-template-columns: repeat(auto-fit, 29em);
        align-items: center;
    }
}

.hero__wrap .hero__title {
    font-size: 1.8em;
    color: #fff;
    margin-left: 0.5em;
}

@media only screen and (min-width: 48em) {
    .hero__wrap .hero__title {
        margin-left: -2.5em;
    }
}

@media only screen and (min-width: 62em) {
    .hero__wrap .hero__title {
        padding: 1rem 0;
        font-size: 2.625em;
        line-height: 3.125rem;
        margin-left: 2em;
    }
}

.page-content {
    max-width: 52.5rem;
    margin: 0 auto;
    padding: 2.5em 0
}

@media only screen and (min-width: 48em) {
    .page-content {
        padding: 3.75rem 0
    }
}

.blog {
    background-color: #f9f9f9
}
/* ... */

